[gd_scene load_steps=4 format=3 uid="uid://ixop43p52i4"]

[ext_resource type="Script" uid="uid://yfix73qq7mpw" path="res://Tests/dice_hand_test.gd" id="1_72lin"]
[ext_resource type="PackedScene" uid="uid://dugpl3du3i6xo" path="res://Scenes/Dice/dice_hand.tscn" id="2_xmuv1"]
[ext_resource type="PackedScene" uid="uid://c6k045mexxkyd" path="res://Scenes/Dice/dice.tscn" id="3_38eyw"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_72lin")

[node name="DiceHand" parent="." instance=ExtResource("2_xmuv1")]
dice_scene = ExtResource("3_38eyw")

[node name="RollButton" type="Button" parent="."]
offset_left = 14.0
offset_top = 133.0
offset_right = 22.0
offset_bottom = 141.0
text = "ROLL"

[node name="DiceContainer" type="Node2D" parent="."]

[connection signal="pressed" from="RollButton" to="." method="_on_button_pressed"]
